[gd_scene load_steps=5 format=3 uid="uid://d3ki56kprs8h3"]

[ext_resource type="Script" path="res://Nodes/DayNightSystem/day_night_system.gd" id="1_ac8un"]

[sub_resource type="Gradient" id="Gradient_0x6ei"]
interpolation_mode = 2
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.05, 0.15, 0.3, 0.45, 0.55, 0.7)
colors = PackedColorArray(0.000505277, 0.245018, 0.805408, 1, 1, 0.77342, 0.777661, 1, 0.8, 0.976667, 1, 1, 1, 1, 1, 1, 0.849888, 1.00363, 1.02088, 1, 1, 0.77342, 0.777661, 1, 0.000505277, 0.245018, 0.805408, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kfox3"]
gradient = SubResource("Gradient_0x6ei")

[sub_resource type="Curve" id="Curve_fy65g"]
_data = [Vector2(0, 0), 0.0, 5.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -5.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[node name="DayNightSystem" type="Node2D"]
script = ExtResource("1_ac8un")
day_night_colors = SubResource("GradientTexture1D_kfox3")
sun_intensity = SubResource("Curve_fy65g")

[node name="AmbientColor" type="CanvasModulate" parent="."]
color = Color(0.12549, 0.32549, 1, 1)

[node name="SunNode" type="DirectionalLight2D" parent="."]
light_mask = 5
energy = 0.5
range_item_cull_mask = 5
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 2.0
shadow_item_cull_mask = 5

[node name="TimeTick" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="TimeTick" to="." method="_on_time_tick_timeout"]
